Port to NeoForge 1.20.2

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,9 @@
 pluginManagement {
     repositories {
+        mavenLocal()
         gradlePluginPortal()
-        maven {
-            name = 'MinecraftForge'
-            url = 'https://maven.minecraftforge.net/'
-        }
-        maven {
-            name = 'ParchmentMC'
-            url = 'https://maven.parchmentmc.org'
-        }
+        maven { url = 'https://maven.neoforged.net/releases' }
+        // maven { url = 'https://maven.parchmentmc.org' }
     }
 }
 
