--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,13 @@ minecraft_version=1.20.4
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.20.2,1.21)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=20.4.73-beta
+neo_version=20.4.160-beta
 # The Neo version range can use any version of Neo as bounds or match the loader version range
 neo_version_range=[20.4.25,)
 # The loader version range can only use the major version of Neo/FML as bounds
 loader_version_range=[1,)
+
+jei_version=17.3.0.49
 
 # Parchment properties
 neogradle.subsystems.parchment.minecraftVersion=1.20.3
@@ -33,7 +35,7 @@ mod_name=Modular Materials
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=LGPL-3.0
 # The mod version. See https://semver.org/
-mod_version=0.14.3-beta
+mod_version=0.14.4-beta
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
